# converter

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  slang_mips.cpp  slang_mips.h
release/: convert.bat  inspect.bat
shaders/: buildmip.slang
